home-cluster/spegel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spegel
  labels:
    kubernetes.io/metadata.name: spegel
